Update config to show correct repo.

--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,4 @@ author:
 # Custom vars
 version:          1.0.0
 github:
-  repo:           https://github.com/jedd-ahyoung/jedd-ahyoung.github.io
+  repo:           https://github.com/jedd-ahyoung/off-by-one
