--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Off by One
 tagline:          Programming for the rest of us
-url:              http://blog.jedd-ahyoung.com/
+url:              http://blog.jedd-ahyoung.com
 paginate:         5
 baseurl:          /
 author:
